--- a/src/main/resources/app/commissionReport.fxml
+++ b/src/main/resources/app/commissionReport.fxml
@@ -153,7 +153,7 @@
 
                     <HBox alignment="CENTER_RIGHT" spacing="15">
                         <Button onAction="#back" styleClass="cancel-button" text="Nazad" />
-                        <Button onAction="#handleSave" styleClass="save-button" text="✅ Sačuvaj" />
+                        <Button onAction="#handleSave" styleClass="save-button" text="Sačuvaj" />
                     </HBox>
 
                 </VBox>
