--- a/src/main/resources/templates/cycle_completion_template.html
+++ b/src/main/resources/templates/cycle_completion_template.html
@@ -52,7 +52,6 @@
         .row1-col1 {
             width: 55%;
             font-size: 10pt;
-            font-weight: bold;
             line-height: 1.2;
             padding-left: 8px !important;
         }
@@ -232,7 +231,6 @@
         .delivery-header {
             background-color: #e6e6e6;
             font-size: 10pt;
-            font-weight: bold;
             padding: 5px;
             border-bottom: 1px solid #000;
         }
@@ -297,8 +295,8 @@
             BOSNA I HERCEGOVINA<br/>
             FEDERACIJA BOSNE I HERCEGOVINE<br/>
             ZENIČKO-DOBOJSKI KANTON<br/>
-            UNIVERZITET U ZENICI<br/>
-            POLITEHNIČKI FAKULTET
+            <strong>UNIVERZITET U ZENICI</strong><br/>
+            <strong>POLITEHNIČKI FAKULTET</strong>
         </td>
         <td class="row1-col2" rowspan="2">
             <img src="unze_logo.jpg" alt="Logo" width="90" height="90"/>
@@ -349,7 +347,7 @@
 </div>
 
 <div class="form-row" style="text-align: center;">
-    <span class="input-line w-name">{{studentFullName}} ({{fatherName}})</span>, rođen-a <span class="input-line w-date-short">{{birthDate}}</span>. godine u mjestu
+    <span class="input-line w-name">{{studentFullName}}</span>, rođen-a <span class="input-line w-date-short">{{birthDate}}</span>. godine u mjestu
 </div>
 
 <div class="form-row" style="text-align: center;">
