--- a/src/main/resources/templates/written_exam_report_template.html
+++ b/src/main/resources/templates/written_exam_report_template.html
@@ -174,7 +174,7 @@
         <td class="cell-grid-container" colspan="2">
             <table class="boxes-table">
                 <tr class="boxes-row">
-                    <td></td> <td></td> <td>-</td> <td></td> <td></td> <td>-</td> <td></td> <td></td> <td>-</td> <td></td> <td></td> <td>/</td> <td></td> <td></td>
+                    <td></td> <td></td> <td>-</td> <td></td> <td></td> <td></td><td>-</td> <td></td> <td></td> <td></td><td>-</td> <td></td> <td></td> <td></td> <td></td> <td>/</td> <td></td> <td></td>
                 </tr>
                 <tr class="date-row">
                     <td colspan="14">Datum: {{submissionDate}}</td>
@@ -245,7 +245,6 @@
     <p style="margin-top: 14px; margin-bottom: 14px; text-align: justify; line-height: 1.5;">
         Razrada teoretskog i praktičnog dijela diplomskog rada slijedila je prema utvrđenom zadatku diplomskog rada po rješenju Fakulteta br.
         <span style="display: inline-block; border-bottom: 1px solid #000; min-width: 250px; text-align: center; font-weight: bold; padding: 0 5px;">
-            {{facultyDecisionNumber}}
         </span>
     </p>
 
@@ -284,7 +283,7 @@
             <td width="40%" style="vertical-align: top;">
                 <table style="border: 1px solid #000; border-collapse: collapse; width: 90%; margin-bottom: 10px;">
                     <tr>
-                        <td style="background-color: #f0f0f0; border-bottom: 1px solid #000; padding: 5px; font-weight: bold;">
+                        <td style="background-color: #f0f0f0; border-bottom: 1px solid #000; padding: 5px;">
                             Dostavljeno:
                         </td>
                     </tr>
@@ -296,7 +295,7 @@
                                     <td>Stud. služba</td>
                                 </tr>
                                 <tr>
-                                    <td width="30" style="vertical-align: top;">1 x</td>
+                                    <td width="30" style="vertical-align: top;">1  x</td>
                                     <td>a/a</td>
                                 </tr>
                                 <tr>
