--- a/src/main/resources/app/defenseReport.fxml
+++ b/src/main/resources/app/defenseReport.fxml
@@ -66,7 +66,7 @@
                             </VBox>
 
                             <VBox spacing="5" GridPane.columnIndex="1" GridPane.rowIndex="0">
-                                <Label styleClass="field-label" text="Datum odbrane" />
+                                <Label styleClass="field-label" text="Datum odbrane završnog rada" />
                                 <Text fx:id="defenseDateText" styleClass="field-value" text="DD.MM.GGGG." />
                             </VBox>
 
@@ -80,10 +80,6 @@
                                 <Text fx:id="mentorNameText" styleClass="field-value" text="Titula Ime Prezime" />
                             </VBox>
 
-                            <VBox spacing="5" GridPane.columnIndex="1" GridPane.rowIndex="2">
-                                <Label styleClass="field-label" text="Konačna ocjena" />
-                                <Text fx:id="finalGradeText" style="-fx-font-weight: bold; -fx-fill: #2e7d32;" styleClass="field-value" text="10 (deset)" />
-                            </VBox>
                             <columnConstraints>
                                 <ColumnConstraints percentWidth="60.0" />
                                 <ColumnConstraints percentWidth="40.0" />
