--- a/src/main/resources/templates/defense_report_template.html
+++ b/src/main/resources/templates/defense_report_template.html
@@ -14,11 +14,6 @@
         @page {
             size: A4;
             margin: 15mm 20mm 15mm 20mm;
-            @bottom-left {
-                content: "Obrazac PTF-SS-023";
-                font-size: 8pt;
-                font-family: 'Times New Roman', serif;
-            }
         }
 
         body {
@@ -346,7 +341,7 @@
         <td class="cell-grid-container" colspan="2">
             <table class="boxes-table">
                 <tr class="boxes-row">
-                    <td></td> <td></td> <td>-</td> <td></td> <td></td> <td>-</td> <td></td> <td></td> <td>-</td> <td></td> <td></td> <td>/</td> <td></td> <td></td>
+                    <td></td> <td></td> <td>-</td> <td></td> <td></td> <td></td><td>-</td> <td></td> <td></td> <td></td><td>-</td> <td></td> <td></td> <td></td> <td></td> <td>/</td> <td></td> <td></td>
                 </tr>
                 <tr class="date-row">
                     <td colspan="14">Datum: {{defenseDate}}</td>
@@ -501,7 +496,16 @@
     </div>
 
     <div class="grade-section">
-        <p style="margin-bottom: 10px;">Po završetku usmenog dijela diplomskog ispita Komisija je ocijenila usmeni dio ispita i diplomski ispit ocjenom <span style="display: inline-block; border-bottom: 1px solid #000; min-width: 80px; text-align: center; font-weight: bold; padding: 0 10px 2px 10px;">{{finalGrade}}</span>.</p>
+        <p style="margin-bottom: 10px; line-height: 1.5;">
+            Po završetku usmenog dijela diplomskog ispita Komisija je ocijenila usmeni dio ispita i diplomski ispit ocjenom
+            <span style="display: inline-block;
+                     border-bottom: 1px solid #000;
+                     min-width: 80px;
+                     text-align: center;
+                     font-weight: bold;
+                     padding: 0px 10px 10px 10px;">
+        </span>.
+        </p>
     </div>
 </div>
 
@@ -524,7 +528,7 @@
             <td width="50%" style="vertical-align: top;">
                 <table style="border: 1px solid #000; border-collapse: collapse; width: 90%; margin-bottom: 10px;">
                     <tr>
-                        <td style="background-color: #f0f0f0; border-bottom: 1px solid #000; padding: 5px; font-weight: bold;">
+                        <td style="background-color: #f0f0f0; border-bottom: 1px solid #000; padding: 5px;">
                             Dostavljeno:
                         </td>
                     </tr>
@@ -560,6 +564,7 @@
             </td>
         </tr>
     </table>
+    <div style="font-size: 7pt;">Obrazac PTF-SS-021</div>
 </div>
 
 </body>
