--- a/src/main/resources/templates/cycle_completion_template.html
+++ b/src/main/resources/templates/cycle_completion_template.html
@@ -421,7 +421,7 @@
             </div>
             <div style="height: 35px;"></div>
             <div class="sig-line"></div>
-            <div class="dean-name">Prof. dr. Samir Lemeš</div>
+            <div class="dean-name">{{deanFullName}}</div>
         </div>
     </div>
 </div>
